force-app/main/default/objects/DRE__DRE_Action_Attribute__mdt/DRE__DRE_Action_Attribute__mdt.object-meta.xml
<CustomObject>
    <label>DRE Action Attribute</label>
    <pluralLabel>DRE Action Attributes</pluralLabel>
</CustomObject>