force-app/main/default/objects/DRE__DRE_Action_Attribute__mdt/fields/DRE__DRE_Action__c.field-meta.xml
<CustomField>
    <fullName>DRE__DRE_Action__c</fullName>
    <label>DRE Action</label>
    <referenceTo>DRE__DRE_Action__mdt</referenceTo>
    <relationshipLabel>DRE Action Attributes</relationshipLabel>
    <relationshipName>DRE_Action_Attributes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>