force-app/main/default/objects/DRE__DRE_Action_Attribute__mdt/fields/DRE__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>DRE__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>