force-app/main/default/objects/DRE__DRE_Action_Attribute__mdt/fields/DRE__Order__c.field-meta.xml
<CustomField>
    <fullName>DRE__Order__c</fullName>
    <defaultValue>99</defaultValue>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>