force-app/main/default/objects/DRE__DRE_Action_Attribute__mdt/listViews/DRE__All.listView-meta.xml
<ListView>
    <fullName>DRE__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>DRE__DRE_Action__c</columns>
    <columns>DRE__Help_Text__c</columns>
    <columns>DRE__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>